etl/deploy/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opl-system
  labels:
    app.kubernetes.io/part-of: openshift-partner-labs
